# sparrow-kata-full

./: README.md  easy-settings.cmake
apps/system/components/DebugConsole/: Cargo.toml  DebugConsole.camkes
apps/system/components/DebugConsole/default-uart-client/: Cargo.toml  build.rs
apps/system/components/DebugConsole/default-uart-client/src/: lib.rs
apps/system/components/DebugConsole/kata-allocator/: Cargo.toml
apps/system/components/DebugConsole/kata-allocator/src/: lib.rs
apps/system/components/DebugConsole/kata-debug-console/: Cargo.toml
apps/system/components/DebugConsole/kata-debug-console/src/: run.rs
apps/system/components/DebugConsole/kata-io/: Cargo.toml
apps/system/components/DebugConsole/kata-line-reader/: Cargo.toml
apps/system/components/DebugConsole/kata-line-reader/src/: lib.rs
apps/system/components/DebugConsole/kata-logger/: Cargo.toml
apps/system/components/DebugConsole/kata-logger/src/: lib.rs
apps/system/components/DebugConsole/kata-panic/: Cargo.toml
apps/system/components/DebugConsole/kata-shell/: Cargo.toml  build.rs
apps/system/components/DebugConsole/kata-shell/src/: fringe_cmds.rs  lib.rs  rz.rs  test_global_allocator.rs  test_memory_manager.rs  test_ml_coordinator.rs  test_panic.rs  test_sdk_runtime.rs  test_security_coordinator.rs  test_timer_service.rs  test_uart.rs
apps/system/components/DebugConsole/kata-uart-client/: Cargo.toml
apps/system/components/DebugConsole/kata-uart-client/src/: lib.rs
apps/system/components/DebugConsole/zmodem/: Cargo.toml
apps/system/components/DebugConsole/zmodem/src/: lib.rs  proto.rs  recv.rs  send.rs
apps/system/components/DebugConsole/zmodem/tests/: lib.rs
apps/system/components/MailboxDriver/mailbox-driver/: Cargo.toml
apps/system/components/MailboxDriver/mailbox-driver/src/: lib.rs
apps/system/components/MemoryManager/: Cargo.toml  MemoryManager.camkes
apps/system/components/MemoryManager/kata-memory-component/: Cargo.toml
apps/system/components/MemoryManager/kata-memory-component/src/: run.rs
apps/system/components/MemoryManager/kata-memory-interface/: Cargo.toml  Makefile  build.rs
apps/system/components/MemoryManager/kata-memory-interface/src/: lib.rs
apps/system/components/MemoryManager/kata-memory-manager/: Cargo.toml
apps/system/components/MemoryManager/kata-memory-manager/src/: lib.rs
apps/system/components/MemoryManager/kata-memory-manager/src/memory_manager/: mod.rs
apps/system/components/MlCoordinator/: Cargo.toml  MlCoordinator.camkes  README.md
apps/system/components/MlCoordinator/fake-vec-core/: Cargo.toml
apps/system/components/MlCoordinator/fake-vec-core/src/: lib.rs
apps/system/components/MlCoordinator/kata-ml-component/: Cargo.toml
apps/system/components/MlCoordinator/kata-ml-component/src/: run.rs
apps/system/components/MlCoordinator/kata-ml-coordinator/: Cargo.toml
apps/system/components/MlCoordinator/kata-ml-coordinator/src/: lib.rs  run.rs
apps/system/components/MlCoordinator/kata-ml-core/: Cargo.toml
apps/system/components/MlCoordinator/kata-ml-core/src/: lib.rs
apps/system/components/MlCoordinator/kata-ml-interface/: Cargo.toml  Makefile
apps/system/components/MlCoordinator/kata-ml-interface/src/: lib.rs
apps/system/components/MlCoordinator/kata-ml-shared/: Cargo.toml
apps/system/components/MlCoordinator/kata-ml-shared/src/: lib.rs
apps/system/components/MlCoordinator/kata-ml-support/: Cargo.toml
apps/system/components/MlCoordinator/kata-ml-support/src/: image_manager.rs
apps/system/components/MlCoordinator/kata-vec-core/: Cargo.toml
apps/system/components/MlCoordinator/kata-vec-core/src/: lib.rs  vc_top.rs
apps/system/components/ProcessManager/: Cargo.toml  ProcessManager.camkes
apps/system/components/ProcessManager/kata-proc-common/: Cargo.toml
apps/system/components/ProcessManager/kata-proc-common/src/: lib.rs
apps/system/components/ProcessManager/kata-proc-component/: Cargo.toml
apps/system/components/ProcessManager/kata-proc-component/src/: run.rs
apps/system/components/ProcessManager/kata-proc-interface/: Cargo.toml  Makefile
apps/system/components/ProcessManager/kata-proc-interface/src/: bundle_image.rs  lib.rs
apps/system/components/ProcessManager/kata-proc-manager/: Cargo.toml  build.rs
apps/system/components/ProcessManager/kata-proc-manager/src/: lib.rs  run.rs
apps/system/components/ProcessManager/kata-proc-manager/src/proc_manager/: mod.rs
apps/system/components/ProcessManager/kata-proc-manager/src/sel4bundle/: mod.rs
apps/system/components/ProcessManager/kata-proc-manager/src/sel4bundle/arch/: riscv32.rs
apps/system/components/SecurityCoordinator/: Cargo.toml  SecurityCoordinator.camkes
apps/system/components/SecurityCoordinator/kata-security-common/: Cargo.toml
apps/system/components/SecurityCoordinator/kata-security-common/src/: lib.rs
apps/system/components/SecurityCoordinator/kata-security-component/: Cargo.toml
apps/system/components/SecurityCoordinator/kata-security-component/src/: run.rs
apps/system/components/SecurityCoordinator/kata-security-coordinator/: Cargo.toml
apps/system/components/SecurityCoordinator/kata-security-coordinator/src/: impl.rs  lib.rs
apps/system/components/SecurityCoordinator/kata-security-coordinator/src/fakeimpl/: mod.rs
apps/system/components/SecurityCoordinator/kata-security-interface/: Cargo.toml  Makefile
apps/system/components/SecurityCoordinator/kata-security-interface/src/: lib.rs
apps/system/components/StorageManager/kata-storage-component/: Cargo.toml
apps/system/components/StorageManager/kata-storage-component/src/: run.rs
apps/system/components/StorageManager/kata-storage-interface/: Cargo.toml  Makefile
apps/system/components/StorageManager/kata-storage-interface/src/: lib.rs
apps/system/components/TimerService/kata-timer-component/: Cargo.toml
apps/system/components/TimerService/kata-timer-component/src/: run.rs
apps/system/components/TimerService/kata-timer-service/: Cargo.toml
apps/system/components/TimerService/kata-timer-service/src/: lib.rs
docs/: Component_Model.md
(+109 files in other folders)
