[workspace]

members = [
    "kata-debug-console",
    "kata-io",
    "kata-line-reader",
    "kata-logger",
    "kata-shell",
    "kata-uart-client",
]

[profile.dev]
opt-level = 0
debug = true
lto = "fat"
codegen-units = 1

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
split-debuginfo = "unpacked"

[profile.release.build-override]
opt-level = "z"
codegen-units = 1
