[package]
name = "kata-debug-console"
version = "0.1.0"
authors = ["Matt Harvey <mattharvey@google.com>"]
edition = "2021"
description = "Kata OS DebugConsole"

[dependencies]
panic-halt = "0.2.0"
kata-io = { path = "../kata-io" }
kata-os-common = { path = "../../kata-os-common" }
kata-shell = { path = "../kata-shell" }
kata-uart-client = { path = "../kata-uart-client" }
log = "0.4"

[lib]
name = "kata_debug_console"
path = "src/run.rs"
crate-type = ["staticlib"]
