# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "kata-debug-console"
version = "0.1.0"
authors = ["Matt Harvey <mattharvey@google.com>"]
edition = "2021"
description = "Kata OS DebugConsole"

[features]
default = [
    "autostart_support",
    "sparrow_uart_support",
]
sparrow_uart_support = ["kata-uart-client"]
autostart_support = ["default-uart-client"]
# Log level is Info unless LOG_DEBUG or LOG_TRACE are specified
LOG_DEBUG = []
LOG_TRACE = []

[dependencies]
cpio = { git = "https://github.com/rcore-os/cpio" }
# Disable default so we don't pull in CString which requires an allocator
cstr_core = { version = "0.2.3", default-features = false }
cty = "0.2.1"
default-uart-client = { path = "../default-uart-client", optional = true }
kata-io = { path = "../kata-io" }
kata-os-common = { path = "../../kata-os-common" }
kata-shell = { path = "../kata-shell" }
kata-uart-client = { path = "../kata-uart-client", optional = true }
log = { version = "0.4", features = ["release_max_level_info"] }
panic-halt = "0.2.0"

[lib]
name = "kata_debug_console"
path = "src/run.rs"
crate-type = ["staticlib"]
