[package]
name = "kata-shell"
version = "0.1.0"
authors = ["Matt Harvey <mattharvey@google.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../../kata-os-common/src/sel4-config" }

[build-env]
SEL4_OUT_DIR = "${ROOTDIR}out/kata/kernel"

[features]
default = []
CONFIG_DEBUG_BUILD = []

[dependencies]
crc = { version = "1.4.0", default_features = false }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
kata-io = { path = "../kata-io" }
kata-line-reader = { path = "../kata-line-reader" }
kata-proc-interface = { path = "../../ProcessManager/kata-proc-interface" }
kata-os-common = { path = "../../kata-os-common" }
kata-security-interface = { path = "../../SecurityCoordinator/kata-security-interface" }
kata-storage-interface = { path = "../../StorageManager/kata-storage-interface" }
log = "0.4"
zmodem = { path = "../zmodem" }
