[package]
name = "kata-shell"
version = "0.1.0"
authors = ["Matt Harvey <mattharvey@google.com>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../../kata-os-common/src/sel4-config" }

[features]
default = [
    "TEST_GLOBAL_ALLOCATOR",
    "TEST_MAILBOX",
    "TEST_MEMORY_MANAGER",
    "TEST_ML_COORDINATOR",
    "TEST_PANIC",
    "TEST_SECURITY_COORDINATOR",
    "TEST_TIMER_SERVICE",
]
CONFIG_DEBUG_BUILD = []
CONFIG_KERNEL_MCS = []
# Commands that are likely not useful
FRINGE_CMDS = []
# Runtime tests for various services (please keep sorted)
TEST_GLOBAL_ALLOCATOR = []
TEST_MAILBOX = []
TEST_MEMORY_MANAGER = []
TEST_ML_COORDINATOR = []
TEST_PANIC = []
TEST_SECURITY_COORDINATOR = []
TEST_TIMER_SERVICE = []

[dependencies]
crc = { version = "1.4.0", default_features = false }
cpio = { git = "https://github.com/rcore-os/cpio" }
hashbrown = { version = "0.11", features = ["ahash-compile-time-rng"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
kata-io = { path = "../kata-io" }
kata-line-reader = { path = "../kata-line-reader" }
kata-memory-interface = { path = "../../MemoryManager/kata-memory-interface" }
kata-ml-interface = { path = "../../MlCoordinator/kata-ml-interface" }
kata-proc-interface = { path = "../../ProcessManager/kata-proc-interface" }
kata-os-common = { path = "../../kata-os-common" }
kata-security-interface = { path = "../../SecurityCoordinator/kata-security-interface" }
kata-storage-interface = { path = "../../StorageManager/kata-storage-interface" }
kata-timer-interface = { path = "../../TimerService/kata-timer-interface" }
log = "0.4"
zmodem = { path = "../zmodem" }
