cargo-features = ["edition2021"]

[package]
name = "mailbox-driver"
version = "0.1.0"
edition = "2018"

[features]
default = []

[dependencies]
kata-os-common = { path = "../../kata-os-common" }
log = "0.4"
cty = "0.2.1"
kata-memory-interface = { path = "../../MemoryManager/kata-memory-interface" }

[lib]
name = "mailbox_driver"
path = "src/lib.rs"
crate-type = ["staticlib"]
