[package]
name = "kata-memory-component"
version = "0.1.0"
edition = "2021"

[dependencies]
kata-memory-interface = { path = "../kata-memory-interface" }
kata-memory-manager = { path = "../kata-memory-manager" }
kata-os-common = { path = "../../kata-os-common" }
log = "0.4"
postcard = { version = "0.7", features = ["alloc"], default-features = false }

[lib]
name = "kata_memory_manager"
path = "src/run.rs"
crate-type = ["staticlib"]
