[package]
name = "kata-memory-manager"
version = "0.1.0"
description = "Kata OS MemoryManager service"
edition = "2021"

[features]
default = []
# Log UntypedMemory slabs at startup.
CONFIG_NOISY_UNTYPEDS = []

[dependencies]
kata-os-common = { path = "../../kata-os-common" }
kata-memory-interface = { path = "../kata-memory-interface" }
log = { version = "0.4", features = ["release_max_level_info"] }
smallvec = "1.2"
spin = "0.9"
