[package]
name = "kata-ml-coordinator"
version = "0.1.0"
authors = ["Adam Jesionowski <jesionowski@google.com>"]
edition = "2018"

[dependencies]
kata-logger = { path = "../../DebugConsole/kata-logger" }
kata-panic = { path = "../../DebugConsole/kata-panic" }
kata-ml-interface = { path = "../kata-ml-interface" }
kata-vec-core = { path = "../kata-vec-core" }
log = "0.4"
xmas-elf = "0.8.0"

[lib]
name = "kata_ml_coordinator"
path = "src/run.rs"
crate-type = ["staticlib"]
