[package]
name = "kata-vec-core"
version = "0.1.0"
edition = "2021"

[dependencies]
kata-io = { path = "../../DebugConsole/kata-io" }
kata-memory-interface = { path = "../../MemoryManager/kata-memory-interface" }
kata-ml-shared = { path = "../kata-ml-shared" }
kata-proc-interface = { path = "../../ProcessManager/kata-proc-interface" }
kata-os-common = { path = "../../kata-os-common" }
modular-bitfield = "0.11.2"
log = "0.4"
