[package]
name = "kata-proc-common"
version = "0.1.0"
edition = "2018"

[dependencies]
kata-security-common = { path = "../../SecurityCoordinator/kata-security-common" }
postcard = { version = "0.7", features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
