[package]
name = "kata-proc-common"
version = "0.1.0"
edition = "2018"

[dependencies]
kata-security-interface = { path = "../../SecurityCoordinator/kata-security-interface" }
postcard = { version = "0.7", features = ["alloc"], default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
