cargo-features = ["edition2021"]

[package]
name = "kata-proc-component"
version = "0.1.0"
edition = "2021"

[dependencies]
cstr_core = { version = "0.2.3", default-features = false }
kata-memory-interface = { path = "../../MemoryManager/kata-memory-interface" }
kata-os-common = { path = "../../kata-os-common" }
kata-proc-interface = { path = "../kata-proc-interface" }
kata-proc-manager = { path = "../kata-proc-manager" }
log = "0.4"
postcard = { version = "0.7", features = ["alloc"], default-features = false }

[lib]
name = "kata_process_manager"
path = "src/run.rs"
crate-type = ["staticlib"]
