cargo-features = ["edition2021"]

[package]
name = "kata-proc-interface"
version = "0.1.0"
edition = "2021"

[dependencies]
cstr_core = "0.2.3"
kata-security-interface = { path = "../../SecurityCoordinator/kata-security-interface" }
postcard = { version = "0.7", features = ["alloc"], default-features = false }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
