[package]
name = "kata-proc-manager"
version = "0.1.0"
description = "Kata OS ProcessManager services"
edition = "2018"

[dependencies]
hashbrown = { version = "0.11", features = ["ahash-compile-time-rng"] }
kata-proc-common = { path = "../kata-proc-common" }
kata-security-interface = { path = "../../SecurityCoordinator/kata-security-interface" }
log = "0.4"
postcard = { version = "0.7", features = ["alloc"], default-features = false }
smallstr = "0.2"
spin = "0.9"
