[package]
name = "kata-proc-manager"
version = "0.1.0"
description = "Kata OS ProcessManager services"
edition = "2021"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../../kata-os-common/src/sel4-config" }

[features]
default = []
CONFIG_CAPDL_LOADER_CC_REGISTERS = []
CONFIG_CAPDL_LOADER_WRITEABLE_PAGES = []
CONFIG_DEBUG_BUILD = []
CONFIG_PRINTING = []
CONFIG_KERNEL_MCS = []
CONFIG_SMP_SUPPORT = []

[dependencies]
cstr_core = "0.2.3"
hashbrown = { version = "0.11", features = ["ahash-compile-time-rng"] }
kata-io = { path = "../../DebugConsole/kata-io" }
kata-proc-interface = { path = "../kata-proc-interface" }
kata-memory-interface = { path = "../../MemoryManager/kata-memory-interface" }
kata-os-common = { path = "../../kata-os-common" }
kata-security-interface = { path = "../../SecurityCoordinator/kata-security-interface" }
log = "0.4"
smallstr = "0.2"
spin = "0.9"
static_assertions = "1.1"
