# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "kata-proc-manager"
version = "0.1.0"
description = "Kata OS ProcessManager services"
edition = "2021"
build = "build.rs"

[build-dependencies]
sel4-config = { path = "../../kata-os-common/src/sel4-config" }

[features]
default = []
CONFIG_CAPDL_LOADER_CC_REGISTERS = []
CONFIG_CAPDL_LOADER_WRITEABLE_PAGES = []
CONFIG_DEBUG_BUILD = []
CONFIG_PRINTING = []
CONFIG_KERNEL_MCS = []
CONFIG_SMP_SUPPORT = []

[dependencies]
cstr_core = "0.2.3"
hashbrown = { version = "0.11", features = ["ahash-compile-time-rng"] }
kata-io = { path = "../../DebugConsole/kata-io" }
kata-proc-interface = { path = "../kata-proc-interface" }
kata-memory-interface = { path = "../../MemoryManager/kata-memory-interface" }
kata-os-common = { path = "../../kata-os-common" }
kata-security-interface = { path = "../../SecurityCoordinator/kata-security-interface" }
log = { version = "0.4", features = ["release_max_level_info"] }
smallstr = "0.2"
spin = "0.9"
static_assertions = "1.1"
