[package]
name = "kata-security-component"
version = "0.1.0"
edition = "2018"

[dependencies]
kata-os-common = { path = "../../kata-os-common" }
kata-security-interface = { path = "../kata-security-interface" }
kata-security-coordinator = { path = "../kata-security-coordinator" }
log = "0.4"

[lib]
name = "kata_security_coordinator"
path = "src/run.rs"
crate-type = ["staticlib"]
