[package]
name = "kata-security-component"
version = "0.1.0"
edition = "2021"

[dependencies]
kata-os-common = { path = "../../kata-os-common" }
kata-security-interface = { path = "../kata-security-interface" }
kata-security-coordinator = { path = "../kata-security-coordinator" }
kata-storage-interface = { path = "../../StorageManager/kata-storage-interface" }
log = "0.4"
postcard = { version = "0.7", features = ["alloc"], default-features = false }

[lib]
name = "kata_security_coordinator"
path = "src/run.rs"
crate-type = ["staticlib"]
