# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "kata-security-component"
version = "0.1.0"
edition = "2021"

[dependencies]
kata-os-common = { path = "../../kata-os-common" }
kata-security-interface = { path = "../kata-security-interface" }
kata-security-coordinator = { path = "../kata-security-coordinator" }
kata-storage-interface = { path = "../../StorageManager/kata-storage-interface" }
log = { version = "0.4", features = ["release_max_level_info"] }
postcard = { version = "0.7", features = ["alloc"], default-features = false }

[lib]
name = "kata_security_coordinator"
path = "src/run.rs"
crate-type = ["staticlib"]
