[package]
name = "kata-security-coordinator"
version = "0.1.0"
edition = "2021"

[features]
default = ["fake"]  # TODO(sleffler): sel4 once it exists
fake = []
sel4 = []

[dependencies]
hashbrown = { version = "0.11", features = ["ahash-compile-time-rng"] }
kata-memory-interface = { path = "../../MemoryManager/kata-memory-interface" }
kata-os-common = { path = "../../kata-os-common" }
kata-security-interface = { path = "../kata-security-interface" }
kata-storage-interface = { path = "../../StorageManager/kata-storage-interface" }
log = "0.4"
postcard = { version = "0.7", features = ["alloc"], default-features = false }
