cargo-features = ["edition2021"]

[package]
name = "kata-storage-component"
version = "0.1.0"
edition = "2021"

[dependencies]
cstr_core = { version = "0.2.3", default-features = false }
kata-os-common = { path = "../../kata-os-common" }
kata-storage-interface = { path = "../kata-storage-interface" }
kata-storage-manager = { path = "../kata-storage-manager" }
log = "0.4"
postcard = { version = "0.7", features = ["alloc"], default-features = false }

[lib]
name = "kata_storage_manager"
path = "src/run.rs"
crate-type = ["staticlib"]
