[package]
name = "kata-storage-interface"
version = "0.1.0"
edition = "2018"

[dependencies]
cstr_core = { version = "0.2.3", default-features = false }
kata-security-interface = { path = "../../SecurityCoordinator/kata-security-interface" }
postcard = { version = "0.7", features = ["alloc"], default-features = false }
