[package]
name = "kata-timer-component"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kata-os-common = { path = "../../kata-os-common" }
kata-timer-interface = { path = "../kata-timer-interface" }
kata-timer-service = { path = "../kata-timer-service" }
log = "0.4"

[lib]
name = "kata_timer_component"
path = "src/run.rs"
crate-type = ["staticlib"]
